--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+9<!DOCTYPE html>
 <html lang="en">
 <head><style>
     img{
@@ -11,24 +11,28 @@ width: 550px;
     <title>Document</title>
 </head>
 <body>
-    <img src="1.jpg" alt="">
-    <img src="formal.jpg" alt="">
+    <img src="h1.JPG" alt="">
+    <img src="h2.jpg" alt="">
     
     <br>
 
-    <img src="3.jpg" alt="">
-    <img src="4.jpg" alt="">
+    <img src="h3.jpg" alt="">
+    <img src="h4.jpg" alt="">
 
     <br>
 
 
-    <img src="5.jpg" alt="">
-    <img src="6.jpg" alt="">
+    <img src="h5.jpg" alt="">
+    <img src="h6.jpg" alt="">
 
     <br>
 
-    <img src="7.jpg" alt="">
-    <img src="8.jpg" alt="">
+    <img src="h7.jpg" alt="">
+    <img src="h8.jpg" alt="">
 
+    <br>
+
+    <img src="h9.jpg" alt="">
+    <img src="h10.jpg" alt="">
 </body>
 </html>
