--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ width: 550px;
 </head>
 <body>
     <img src="h1.JPG" alt="">
-    <img src="h2.jpg" alt="">
+    <img src="h10.JPG" alt="">
     
     <br>
 
-    <img src="h3.jpg" alt="">
-    <img src="h4.jpg" alt="">
+    <img src="h3.JPG" alt="">
+    <img src="h4.JPG" alt="">
 
     <br>
 
