--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@ width: 550px;
     <br>
 
 
-    <img src="h5.jpg" alt="">
-    <img src="h6.jpg" alt="">
+    <img src="h5.JPG" alt="">
+    <img src="h6.JPG" alt="">
 
     <br>
 
-    <img src="h7.jpg" alt="">
-    <img src="h8.jpg" alt="">
+    <img src="h7.JPG" alt="">
+    <img src="h8.JPG" alt="">
 
     <br>
 
-    <img src="h9.jpg" alt="">
-    <img src="h10.jpg" alt="">
+    <img src="h9.JPG" alt="">
+    <img src="h10.JPG" alt="">
 </body>
 </html>
